fixed margin issue on mobile for social icons

--- a/partials/_mediaQueries.scss
+++ b/partials/_mediaQueries.scss
@@ -178,6 +178,10 @@
 		color: #fff;
 	}
 
+	.socialContainer i {
+		margin: 25px;
+	}
+
 	main {
 		text-align: center;
 	}
