--- a/styles/style.css
+++ b/styles/style.css
@@ -1085,6 +1085,9 @@ footer a:hover {
     padding: 50px 0;
     color: #fff;
   }
+  .socialContainer i {
+    margin: 25px;
+  }
   main {
     text-align: center;
   }
